afiodarau/11.K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-app
  labels:
    app: simple-web
spec:
  replicas: 4

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: simple-web

  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
