afiodarau/11.K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-service
  labels:
    run: simple-web-service
spec:
  type: ClusterIP
  selector:
    app: simple-web
  ports:
    - port: 80
      protocol: TCP
